finished 2 player game

--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,12 @@
 <html>
 <head>
-  <script src="/bundle.js" ></script>
 </head>
 <body>
   Hello World
+
+  <div id="container"></div>
+  <div id='game'> </div>
+  <script src="/bundle.js" ></script>
+
 </body>
 </html>
